Alignement vertical des images et correction des noms des URL.

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -68,5 +68,5 @@ a.hand-cursor:hover {
 }
 
 .bib-logo {
-  padding-left: 10%;
+  padding-left: 3%;
 }
